--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,8 @@
 
         <body>
             <h1>Static Website</h1>
+
+            <p> this is a static website kelly built</p>
             
         </body>
     </head>
